Fixed some of the links to use correct controller

--- a/FowlerSite/Views/Home/Index.cshtml
+++ b/FowlerSite/Views/Home/Index.cshtml
@@ -147,7 +147,7 @@
                                         <a href="store-product.html">In all revolutions of</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
@@ -159,7 +159,7 @@
                                         <a href="store-product.html">With what mingled joy</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
 
                                 <div class="nk-gap-2"></div>
@@ -341,31 +341,31 @@
                             </a><ul class="dropdown">
 
                                 <li>
-                                    <a asp-action="Store">
+                                    <a asp-controller="Store" asp-action="Store">
                                         Store
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a asp-action="StoreProduct">
+                                    <a asp-controller="Store" asp-action="StoreProduct">
                                         Product
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a asp-action="StoreCatalog">
+                                    <a asp-controller="Store" asp-action="StoreCatalog">
                                         Catalog
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a asp-action="StoreCheckout">
+                                    <a asp-controller="Store" asp-action="StoreCheckout">
                                         Checkout
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a asp-action="StoreCart">
+                                    <a asp-controller="Store" asp-action="StoreCart">
                                         Cart
 
                                     </a>
@@ -1430,7 +1430,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="3"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                     <div class="nk-gap-1"></div>
                                     <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                                 </div>
@@ -1448,7 +1448,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 20.00</div>
+                                    <div class="nk-product-price">$ 20.00</div>
                                     <div class="nk-gap-1"></div>
                                     <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                                 </div>
@@ -1466,7 +1466,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                     <div class="nk-gap-1"></div>
                                     <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                                 </div>
@@ -1484,7 +1484,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="1.5"> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 32.00</div>
+                                    <div class="nk-product-price">$ 32.00</div>
                                     <div class="nk-gap-1"></div>
                                     <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                                 </div>
@@ -1742,7 +1742,7 @@
                                     </a>
                                     <h3 class="nk-post-title"><a href="store-product.html">So saying he unbuckled</a></h3>
                                     <div class="nk-product-rating" data-rating="4"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
@@ -1751,7 +1751,7 @@
                                     </a>
                                     <h3 class="nk-post-title"><a href="store-product.html">However, I have reason</a></h3>
                                     <div class="nk-product-rating" data-rating="2.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
-                                    <div class="nk-product-price">€ 32.00</div>
+                                    <div class="nk-product-price">$ 32.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
@@ -1760,7 +1760,7 @@
                                     </a>
                                     <h3 class="nk-post-title"><a href="store-product.html">It was some time before</a></h3>
                                     <div class="nk-product-rating" data-rating="5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
 
                             </div>
