--- a/FowlerSite/Views/Store/Store.cshtml
+++ b/FowlerSite/Views/Store/Store.cshtml
@@ -115,7 +115,7 @@
                                         <a href="store-product.html">In all revolutions of</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
@@ -127,7 +127,7 @@
                                         <a href="store-product.html">With what mingled joy</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
 
                                 <div class="nk-gap-2"></div>
@@ -309,37 +309,31 @@
                             </a><ul class="dropdown">
 
                                 <li class="active">
-                                    <a href="store.html">
+                                    <a asp-action="Store">
                                         Store
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-product.html">
+                                    <a asp-action="StoreProduct">
                                         Product
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-catalog.html">
+                                    <a asp-action="StoreCatalog">
                                         Catalog
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-catalog-alt.html">
-                                        Catalog Alt
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-checkout.html">
+                                    <a asp-action="StoreCheckout">
                                         Checkout
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-cart.html">
+                                    <a asp-action="StoreCart">
                                         Cart
 
                                     </a>
@@ -539,7 +533,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">So saying he unbuckled</a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
                             </div>
                         </div>
@@ -556,7 +550,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">However, I have reason</a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 32.00</div>
+                                    <div class="nk-product-price">$ 32.00</div>
                                 </div>
                             </div>
                         </div>
@@ -573,7 +567,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">It was some time before</a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
                             </div>
                         </div>
@@ -590,7 +584,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">She was bouncing</a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 20.00</div>
+                                    <div class="nk-product-price">$ 20.00</div>
                                 </div>
                             </div>
                         </div>
@@ -607,7 +601,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">In all revolutions of</a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
                             </div>
                         </div>
@@ -624,7 +618,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">Just then her head </a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 32.00</div>
+                                    <div class="nk-product-price">$ 32.00</div>
                                 </div>
                             </div>
                         </div>
@@ -641,7 +635,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">With what mingled joy</a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
                             </div>
                         </div>
@@ -658,7 +652,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">She was bouncing away</a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 20.00</div>
+                                    <div class="nk-product-price">$ 20.00</div>
                                 </div>
                             </div>
                         </div>
@@ -675,7 +669,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">The word was</a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
                             </div>
                         </div>
@@ -692,7 +686,7 @@
                                     <div class="nk-gap-1"></div>
                                     <h3 class="nk-product-title h5"><a href="store-product.html">My mother was so much</a></h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 32.00</div>
+                                    <div class="nk-product-price">$ 32.00</div>
                                 </div>
                             </div>
                         </div>
@@ -720,7 +714,7 @@
                             <div class="nk-gap-1"></div>
                             She clutched the matron by the arm, and forcing her into a chair by the bedside, was about to speak, when looking round, she caught sight of the two old women
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -740,7 +734,7 @@
                             <div class="nk-gap-1"></div>
                             For good, too; though, in consequence of my previous emotions, I was still occasionally seized with a stormy sob. After we had jogged on for some little time
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -760,7 +754,7 @@
                             <div class="nk-gap-1"></div>
                             With what mingled joy and sorrow do I take up the pen to write to my dearest friend! Oh, what a change between to-day and yesterday! Now I am friendless and alone
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 23.00</div>
+                            <div class="nk-product-price">$ 23.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -780,7 +774,7 @@
                             <div class="nk-gap-1"></div>
                             A hundred thousand grateful loves to your dear papa and mamma . Is your poor brother recovered of his rack - punch ? Oh, dear!Oh, dear!How men should beware of wicked
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 32.00</div>
+                            <div class="nk-product-price">$ 32.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -806,7 +800,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="3"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                         </div>
                     </div>
                 </div>
@@ -822,7 +816,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                         </div>
                     </div>
                 </div>
@@ -838,7 +832,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 23.00</div>
+                            <div class="nk-product-price">$ 23.00</div>
                         </div>
                     </div>
                 </div>
@@ -854,7 +848,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="1.5"> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 32.00</div>
+                            <div class="nk-product-price">$ 32.00</div>
                         </div>
                     </div>
                 </div>
@@ -870,7 +864,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="4"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                         </div>
                     </div>
                 </div>
@@ -886,7 +880,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                         </div>
                     </div>
                 </div>
