--- a/FowlerSite/Views/Store/StoreCheckout.cshtml
+++ b/FowlerSite/Views/Store/StoreCheckout.cshtml
@@ -150,7 +150,7 @@
                                         <a href="store-product.html">In all revolutions of</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
@@ -162,7 +162,7 @@
                                         <a href="store-product.html">With what mingled joy</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
 
                                 <div class="nk-gap-2"></div>
@@ -343,43 +343,37 @@
 
                             </a><ul class="dropdown">
 
-                                <li>
-                                    <a href="store.html">
+                                
+                                <li class="active">
+                                    <a asp-action="Store">
                                         Store
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-product.html">
+                                    <a asp-action="StoreProduct">
                                         Product
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-catalog.html">
+                                    <a asp-action="StoreCatalog">
                                         Catalog
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-catalog-alt.html">
-                                        Catalog Alt
-
-                                    </a>
-                                </li>
-                                <li class="active">
-                                    <a href="store-checkout.html">
+                                    <a asp-action="StoreCheckout">
                                         Checkout
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-cart.html">
+                                    <a asp-action="StoreCart">
                                         Cart
 
                                     </a>
                                 </li>
-                            </ul>
                         </li>
                     </ul>
                     <ul class="nk-nav nk-nav-right nk-nav-icons">
@@ -565,7 +559,7 @@
                                     However, I have reason &times; 1
                                 </td>
                                 <td class="nk-product-cart-total">
-                                    € 32.00
+                                    $ 32.00
                                 </td>
                             </tr>
 
@@ -574,7 +568,7 @@
                                     She was bouncing &times; 1
                                 </td>
                                 <td class="nk-product-cart-total">
-                                    € 20.00
+                                    $ 20.00
                                 </td>
                             </tr>
 
@@ -583,7 +577,7 @@
                                     Subtotal
                                 </td>
                                 <td>
-                                    € 52.00
+                                    $ 52.00
                                 </td>
                             </tr>
                             <tr class="nk-store-cart-totals-shipping">
@@ -599,7 +593,7 @@
                                     Total
                                 </td>
                                 <td>
-                                    € 52.00
+                                    $ 52.00
                                 </td>
                             </tr>
                         </tbody>
