--- a/FowlerSite/Views/Store/StoreProduct.cshtml
+++ b/FowlerSite/Views/Store/StoreProduct.cshtml
@@ -150,7 +150,7 @@
                                         <a href="store-product.html">In all revolutions of</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
@@ -162,7 +162,7 @@
                                         <a href="store-product.html">With what mingled joy</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
 
                                 <div class="nk-gap-2"></div>
@@ -343,43 +343,37 @@
 
                             </a><ul class="dropdown">
 
-                                <li>
-                                    <a href="store.html">
+                                
+                                <li class="active">
+                                    <a asp-action="Store">
                                         Store
 
                                     </a>
                                 </li>
-                                <li class="active">
-                                    <a href="store-product.html">
+                                <li>
+                                    <a asp-action="StoreProduct">
                                         Product
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-catalog.html">
+                                    <a asp-action="StoreCatalog">
                                         Catalog
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-catalog-alt.html">
-                                        Catalog Alt
-
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="store-checkout.html">
+                                    <a asp-action="StoreCheckout">
                                         Checkout
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-cart.html">
+                                    <a asp-action="StoreCart">
                                         Cart
 
                                     </a>
                                 </li>
-                            </ul>
                         </li>
                     </ul>
                     <ul class="nk-nav nk-nav-right nk-nav-icons">
@@ -528,7 +522,7 @@
                                 <!-- START: Add to Cart -->
                                 <div class="nk-gap-2"></div>
                                 <form action="#" class="nk-product-addtocart">
-                                    <div class="nk-product-price">€ 32.00</div>
+                                    <div class="nk-product-price">$ 32.00</div>
                                     <div class="nk-gap-1"></div>
                                     <div class="input-group">
                                         <input type="number" class="form-control" value="1" min="1" max="21">
@@ -734,7 +728,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="3"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
                             </div>
                         </div>
@@ -750,7 +744,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 20.00</div>
+                                    <div class="nk-product-price">$ 20.00</div>
                                 </div>
                             </div>
                         </div>
@@ -766,7 +760,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
                             </div>
                         </div>
@@ -782,7 +776,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="1.5"> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 32.00</div>
+                                    <div class="nk-product-price">$ 32.00</div>
                                 </div>
                             </div>
                         </div>
@@ -798,7 +792,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="4"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
                             </div>
                         </div>
@@ -814,7 +808,7 @@
                                     <div class="nk-gap-1"></div>
                                     <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 20.00</div>
+                                    <div class="nk-product-price">$ 20.00</div>
                                 </div>
                             </div>
                         </div>
@@ -874,9 +868,9 @@
                                     <div>
                                         <div class="text-white mt-4 float-left">
                                             PRICE:
-                                            <strong class="text-main-1">€ <span class="nk-input-slider-value-0"></span></strong>
+                                            <strong class="text-main-1">$ <span class="nk-input-slider-value-0"></span></strong>
                                             -
-                                            <strong class="text-main-1">€ <span class="nk-input-slider-value-1"></span></strong>
+                                            <strong class="text-main-1">$ <span class="nk-input-slider-value-1"></span></strong>
                                         </div>
                                         <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-white float-right">Apply</a>
                                     </div>
@@ -942,7 +936,7 @@
                                     </a>
                                     <h3 class="nk-post-title"><a href="store-product.html">So saying he unbuckled</a></h3>
                                     <div class="nk-product-rating" data-rating="4"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
@@ -951,7 +945,7 @@
                                     </a>
                                     <h3 class="nk-post-title"><a href="store-product.html">However, I have reason</a></h3>
                                     <div class="nk-product-rating" data-rating="2.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
-                                    <div class="nk-product-price">€ 32.00</div>
+                                    <div class="nk-product-price">$ 32.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
@@ -960,7 +954,7 @@
                                     </a>
                                     <h3 class="nk-post-title"><a href="store-product.html">It was some time before</a></h3>
                                     <div class="nk-product-rating" data-rating="5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
 
                             </div>
