--- a/FowlerSite/Views/Store/StoreCatalog.cshtml
+++ b/FowlerSite/Views/Store/StoreCatalog.cshtml
@@ -150,7 +150,7 @@
                                         <a href="store-product.html">In all revolutions of</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 23.00</div>
+                                    <div class="nk-product-price">$ 23.00</div>
                                 </div>
 
                                 <div class="nk-widget-post">
@@ -162,7 +162,7 @@
                                         <a href="store-product.html">With what mingled joy</a>
                                     </h3>
                                     <div class="nk-gap-1"></div>
-                                    <div class="nk-product-price">€ 14.00</div>
+                                    <div class="nk-product-price">$ 14.00</div>
                                 </div>
 
                                 <div class="nk-gap-2"></div>
@@ -343,43 +343,37 @@
 
                             </a><ul class="dropdown">
 
-                                <li>
-                                    <a href="store.html">
+
+                                <li class="active">
+                                    <a asp-action="Store">
                                         Store
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-product.html">
+                                    <a asp-action="StoreProduct">
                                         Product
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-catalog.html">
+                                    <a asp-action="StoreCatalog">
                                         Catalog
 
                                     </a>
                                 </li>
-                                <li class="active">
-                                    <a href="store-catalog-alt.html">
-                                        Catalog Alt
-
-                                    </a>
-                                </li>
                                 <li>
-                                    <a href="store-checkout.html">
+                                    <a asp-action="StoreCheckout">
                                         Checkout
 
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="store-cart.html">
+                                    <a asp-action="StoreCart">
                                         Cart
 
                                     </a>
                                 </li>
-                            </ul>
                         </li>
                     </ul>
                     <ul class="nk-nav nk-nav-right nk-nav-icons">
@@ -516,9 +510,9 @@
                                 <div class="nk-input-slider">
                                     <div class="nk-input-slider-content text-white">
                                         PRICE:
-                                        <strong class="text-main-1">€ <span class="nk-input-slider-value-0"></span></strong>
+                                        <strong class="text-main-1">$ <span class="nk-input-slider-value-0"></span></strong>
                                         -
-                                        <strong class="text-main-1">€ <span class="nk-input-slider-value-1"></span></strong>
+                                        <strong class="text-main-1">$ <span class="nk-input-slider-value-1"></span></strong>
                                     </div>
                                     <div class="nk-input-slider-input">
                                         <input type="text"
@@ -564,7 +558,7 @@
                             <div class="nk-gap-1"></div>
                             Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 23.00</div>
+                            <div class="nk-product-price">$ 23.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -583,7 +577,7 @@
                             <div class="nk-gap-1"></div>
                             He made his passenger captain of one, with four of the men; and himself, his mate, and five more, went in the other; and they contrived their business very well, for they
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 32.00</div>
+                            <div class="nk-product-price">$ 32.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -602,7 +596,7 @@
                             <div class="nk-gap-1"></div>
                             I have related the substance of several conversations I had with my master during the greatest part of the time I had the honour to be in his service; but have, indeed
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -621,7 +615,7 @@
                             <div class="nk-gap-1"></div>
                             So saying he unbuckled his baldric with the bugle, took a feather from his cap, and gave them to Wamba; then drew a vizard from his pouch, and, repeating his charges to them
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -640,7 +634,7 @@
                             <div class="nk-gap-1"></div>
                             As we passed, I remarked a beautiful church-spire rising above some old elms in the park; and before them, in the midst of a lawn, and some outhouses, an old red house
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 23.00</div>
+                            <div class="nk-product-price">$ 23.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -659,7 +653,7 @@
                             <div class="nk-gap-1"></div>
                             Now the races of these two have been for some ages utterly extinct, and besides to discourse any further of them would not be at all to my purpose.
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 32.00</div>
+                            <div class="nk-product-price">$ 32.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -678,7 +672,7 @@
                             <div class="nk-gap-1"></div>
                             She clutched the matron by the arm, and forcing her into a chair by the bedside, was about to speak, when looking round, she caught sight of the two old women
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -697,7 +691,7 @@
                             <div class="nk-gap-1"></div>
                             For good, too; though, in consequence of my previous emotions, I was still occasionally seized with a stormy sob. After we had jogged on for some little time
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -716,7 +710,7 @@
                             <div class="nk-gap-1"></div>
                             With what mingled joy and sorrow do I take up the pen to write to my dearest friend! Oh, what a change between to-day and yesterday! Now I am friendless and alone
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 23.00</div>
+                            <div class="nk-product-price">$ 23.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -735,7 +729,7 @@
                             <div class="nk-gap-1"></div>
                             A hundred thousand grateful loves to your dear papa and mamma . Is your poor brother recovered of his rack - punch ? Oh, dear!Oh, dear!How men should beware of wicked
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 32.00</div>
+                            <div class="nk-product-price">$ 32.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -754,7 +748,7 @@
                             <div class="nk-gap-1"></div>
                             Just then her head struck against the roof of the hall: in fact she was now more than nine feet high, and she at once took up the little golden key and hurried off to the garden
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -773,7 +767,7 @@
                             <div class="nk-gap-1"></div>
                             He made his passenger captain of one, with four of the men; and himself, his mate, and five more, went in the other; and they contrived their business very well, for they
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -792,7 +786,7 @@
                             <div class="nk-gap-1"></div>
                             I have related the substance of several conversations I had with my master during the greatest part of the time I had the honour to be in his service; but have, indeed
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 23.00</div>
+                            <div class="nk-product-price">$ 23.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -811,7 +805,7 @@
                             <div class="nk-gap-1"></div>
                             So saying he unbuckled his baldric with the bugle, took a feather from his cap, and gave them to Wamba; then drew a vizard from his pouch, and, repeating his charges to them
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 32.00</div>
+                            <div class="nk-product-price">$ 32.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -830,7 +824,7 @@
                             <div class="nk-gap-1"></div>
                             As we passed, I remarked a beautiful church-spire rising above some old elms in the park; and before them, in the midst of a lawn, and some outhouses, an old red house
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -849,7 +843,7 @@
                             <div class="nk-gap-1"></div>
                             Now the races of these two have been for some ages utterly extinct, and besides to discourse any further of them would not be at all to my purpose.
                             <div class="nk-gap-2"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                             <div class="nk-gap-1"></div>
                             <a href="#" class="nk-btn nk-btn-rounded nk-btn-color-dark-3 nk-btn-hover-color-main-1">Add to Cart</a>
                         </div>
@@ -894,7 +888,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="3"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                         </div>
                     </div>
                 </div>
@@ -910,7 +904,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                         </div>
                     </div>
                 </div>
@@ -926,7 +920,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 23.00</div>
+                            <div class="nk-product-price">$ 23.00</div>
                         </div>
                     </div>
                 </div>
@@ -942,7 +936,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="1.5"> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i> <i class="far fa-star"></i> <i class="far fa-star"></i> <i class="far fa-star"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 32.00</div>
+                            <div class="nk-product-price">$ 32.00</div>
                         </div>
                     </div>
                 </div>
@@ -958,7 +952,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="4"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="far fa-star"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 14.00</div>
+                            <div class="nk-product-price">$ 14.00</div>
                         </div>
                     </div>
                 </div>
@@ -974,7 +968,7 @@
                             <div class="nk-gap-1"></div>
                             <div class="nk-product-rating" data-rating="4.5"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fas fa-star-half"></i></div>
                             <div class="nk-gap-1"></div>
-                            <div class="nk-product-price">€ 20.00</div>
+                            <div class="nk-product-price">$ 20.00</div>
                         </div>
                     </div>
                 </div>
